build: update build and run scripts for SQLite support